# RedFox-Futebol-Backend

./: .env-exemplo  README.md  pyproject.toml  requirements.txt
RedFox/: admin.py
RedFox/migrations/: 0001_initial.py  0002_alter_ingresso_preco.py
RedFox/models/: __init__.py  compra.py  ingresso.py  partida.py  time.py
RedFox/serializers/: __init__.py  compra.py  ingresso.py  partida.py  time.py
RedFox/views/: __init__.py  compra.py  ingresso.py  partida.py  time.py
config/: settings.py  urls.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
